--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -6,11 +6,16 @@ permissions:
   pull-requests: write
 
 jobs:
-  # echo:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - run: ${{ tojson(github) }}
-  #       shell: cat {0}
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+      - run: ${{ tojson(github) }}
+        shell: cat {0}
+      - run: |
+          if [ -z ${{secrets.WORKFLOW_APP_ID }} ]; then
+            echo "WORKFLOW_APP_ID is not set"
+            exit 1
+          fi
   dependabot:
     uses: ktarmyshov/github-actions/.github/workflows/dependabot.yml@a04c41924253afe9f74c5bd9e3268bb54046c7f5
     secrets: inherit
