--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -6,16 +6,18 @@ permissions:
   pull-requests: write
 
 jobs:
-  echo:
-    runs-on: ubuntu-latest
-    steps:
-      - run: ${{ tojson(github) }}
-        shell: cat {0}
-      - run: |
-          if [ -z ${{secrets.WORKFLOW_APP_ID }} ]; then
-            echo "WORKFLOW_APP_ID is not set"
-            exit 1
-          fi
+  # echo:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: ${{ tojson(github) }}
+  #       shell: cat {0}
+  #     - run: |
+  #         if [ -z ${{secrets.WORKFLOW_APP_ID }} ]; then
+  #           echo "WORKFLOW_APP_ID is not set"
+  #           exit 1
+  #         fi
   dependabot:
     uses: ktarmyshov/github-actions/.github/workflows/dependabot.yml@a04c41924253afe9f74c5bd9e3268bb54046c7f5
-    secrets: inherit
+    secrets:
+      WORKFLOW_APP_ID: ${{ secrets.WORKFLOW_APP_ID }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
