--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -20,4 +20,4 @@ jobs:
     uses: kt-public/github-actions/.github/workflows/dependabot.yml@f22d9e9d02846d781e22df70c139174c3068db01
     secrets:
       WORKFLOW_APP_ID: ${{ secrets.WORKFLOW_APP_ID }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      WORKFLOW_APP_PRIVATE_KEY: ${{ secrets.WORKFLOW_APP_PRIVATE_KEY }}
