--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -17,6 +17,7 @@ jobs:
   #           exit 1
   #         fi
   dependabot:
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     uses: kt-public/github-actions/.github/workflows/dependabot.yml@70331336ca6071f9ab280af77408e1dbd531804b
     secrets:
       WORKFLOW_APP_ID: ${{ secrets.WORKFLOW_APP_ID }}
