auto-release workflow

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -71,11 +71,11 @@ jobs:
           echo "Highest version: $highest_version"
           echo "highest_version=$highest_version" >> "$GITHUB_OUTPUT"
 
-      # - name: Enable auto-merge for Changeset PR
-      #   if: steps.check-pr.outputs.pr_number != '0' && steps.check-changeset.outputs.highest_version == 'patch'
-      #   run: |
-      #     pr_number=${{ steps.check-pr.outputs.pr_number }}
-      #     echo "Merging PR #$pr_number"
-      #     gh pr merge $pr_number --auto --squash --delete-branch
-      #   env:
-      #     GH_TOKEN: ${{ steps.app-token.outputs.token }}
+      - name: Enable auto-merge for Changeset PR
+        if: steps.check-pr.outputs.pr_number != '0' && steps.check-changeset.outputs.highest_version == 'patch'
+        run: |
+          pr_number=${{ steps.check-pr.outputs.pr_number }}
+          echo "Merging PR #$pr_number"
+          gh pr merge $pr_number --auto --squash --delete-branch
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
