--- a/.github/workflows/changeset-auto-release.yml
+++ b/.github/workflows/changeset-auto-release.yml
@@ -2,9 +2,9 @@ name: Changeset auto-release
 
 on:
   schedule:
-    # - cron: "0 0 1 * *" # At 00:00 on day-of-month 1 (UTC)
+    - cron: "28 4 1 * *" # At 04:28 on day-of-month 1 (UTC)
     # Just for testing purposes - run every 5 minutes
-    - cron: "*/5 * * * *" # Every 5 minutes
+    # - cron: "*/5 * * * *" # Every 5 minutes
 
 permissions:
   contents: read
