rework sonar props

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,5 +1,1 @@
-sonar.organization=ktarmyshov
-sonar.projectKey=ktarmyshov_svelte5kit-localization
-sonar.projectName=svelte5kit-localization
-
-sonar.exclusions=src/routes/**/*
+sonar-project.properties
