--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=ktarmyshov
-sonar.projectKey=ktarmyshov_svelte5kit-localization
+sonar.organization=kt-public
+sonar.projectKey=kt-public_svelte5kit-localization
 sonar.projectName=svelte5kit-localization
 
 sonar.exclusions=src/routes/**/*
