--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,9 +14,9 @@ name: "CodeQL Advanced"
 on:
   workflow_call:
   # push:
-  #   branches: ["master"]
+  #   branches: ["main"]
   # pull_request:
-  #   branches: ["master"]
+  #   branches: ["main"]
   schedule:
     - cron: "37 9 * * 4"
 
