--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
     # prevents this action from running on forks
     if: >-
       github.repository == 'kt-public/svelte5kit-localization' && 
-      github.ref == 'refs/heads/master' && 
+      github.ref == 'refs/heads/main' && 
       github.event.workflow_run.event == 'push' && 
       github.event.workflow_run.conclusion == 'success'
     permissions:
