--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@sveltejs/kit": "^2.19.0",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@types/node": "^22.14.0",
     "cypress": "^14.2.0",
     "dompurify": "^3.2.4",
     "eslint": "^9.22.0",
