--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte5kit-localization",
+  "name": "@ktarmyshov/svelte5kit-localization",
   "description": "Localization for SvelteKit with Svelte 5 reactivity",
   "version": "0.1.16",
   "license": "MIT",
