--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,33 +25,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - uses: kt-actions/npm-run-script@v1
         with:
-          node-version: 20
-          cache: npm
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run check
+          matrix-node-version: ${{ vars.MATRIX_NODE_VERSION }}
+          install-script: npm ci
+          run-script: |
+            npm run check
+            npm run lint
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: ${{ fromJson(vars.MATRIX_NODE_VERSION) }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - uses: kt-actions/npm-run-script@v1
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-      - run: npm ci
-      - run: npm run build
+          matrix-node-version: '[${{ matrix.node-version }}]'
+          install-script: npm ci
+
       - uses: cypress-io/github-action@v6
         with:
           start: npm run preview
           wait-on: http://localhost:5173
-  # sonar:
-  #   uses: ./.github/workflows/sonar.yml
-  #   secrets: inherit
+
   codeql:
     uses: ./.github/workflows/codeql.yml
     secrets: inherit
@@ -63,3 +62,13 @@ jobs:
       # only required for workflows in private repositories
       actions: read
       contents: read
+  sonar:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: sonarsource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
