--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 		"name": "Konstantin Tarmyshov",
 		"email": "k.tarmyshov@googlemail.com"
 	},
-	"homepage": "https://github.com/kt-public/svelte5kit-localization",
 	"keywords": [
 		"svelte",
 		"svelte5",
@@ -18,9 +17,13 @@
 		"i18n",
 		"l10n"
 	],
+	"homepage": "https://github.com/kt-npm-modules/svelte5kit-localization",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/kt-public/svelte5kit-localization.git"
+		"url": "git+https://github.com/kt-npm-modules/svelte5kit-localization.git"
+	},
+	"bugs": {
+		"url": "https://github.com/kt-npm-modules/svelte5kit-localization/issues"
 	},
 	"scripts": {
 		"dev": "vite dev",
