--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           install-script: 'npm ci'
           run-script: ''
-          cache-save-always: true
-          cache-additional-path: /home/runner/.cache/Cypress
+          # cache-save-always: true
+          # cache-additional-path: /home/runner/.cache/Cypress
   ci:
     needs: cache
     uses: kt-workflows/npm-ci/.github/workflows/main.yml@v1
