--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           install-script: 'npm ci'
           run-script: ''
-          cache-delete: true # uncomment this line to delete the cache
+          # cache-delete: true # uncomment this line to delete the cache
           cache-additional-path: /home/runner/.cache/Cypress
   ci:
     needs: cache
