--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ concurrency:
 
 permissions:
   contents: read # to fetch code (actions/checkout)
+  actions: write # to cache (actions/cache)
 
 jobs:
   # echo:
