--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,9 +49,9 @@ jobs:
     with:
       # pass the matrix node version to the called workflow
       matrix-node-version: ${{ vars.MATRIX_NODE_VERSION }}
-      # cache-delete: true # uncomment this line to delete the cache
-      cache-additional-path: /home/runner/.cache/Cypress
       test-script: ''
       sonar-script: ''
-    secrets:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      cache-reset: true # uncomment this line to reset the cache
+      cache-additional-path: /home/runner/.cache/Cypress
+    # secrets:
+    #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
