--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,6 @@ jobs:
       test-script: ''
       sonar-script: ''
       cache-additional-path: /home/runner/.cache/Cypress
-      cache-reset: true # uncomment this line to reset the cache
+      # cache-reset: true # uncomment this line to reset the cache
     # secrets:
     #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
