--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test": "cypress run --browser chrome",
+		"test:preview": "concurrently --kill-others \"npm run preview\" \"npm run test\"",
 		"changeset:version": "changeset version && git add --all",
 		"changeset:publish": "changeset publish",
 		"cy:open": "cypress open"
@@ -69,6 +70,7 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"concurrently": "^9.1.2",
 		"cypress": "^14.3.2",
 		"dompurify": "^3.2.5",
 		"eslint": "^9.25.1",
