--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,1 @@
-sonar.organization=kt-npm-modules
-sonar.projectKey=kt-npm-modules_svelte5kit-localization
-sonar.projectName=svelte5kit-localization
-
-sonar.exclusions=src/routes/**/*
+.sonarcloud.properties
