--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,1 +1,11 @@
-sonar-project.properties
+sonar.organization=kt-npm-modules
+sonar.projectKey=kt-npm-modules_svelte5kit-localization
+sonar.projectName=svelte5kit-localization
+
+sonar.sources=./src
+sonar.exclusions=./src/routes/**/*
+sonar.tests=./cypress
+# sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+
+# sonar.exclusions=src/routes/**/*
+sonar.cpd.exclusions=./cypress/**/*,
