--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,12 +37,12 @@ jobs:
       matrix:
         node-version: ${{ fromJson(vars.MATRIX_NODE_VERSION) }}
     steps:
-      - uses: kt-workflows/actions/npm-ci-test@main
+      - uses: kt-workflows/actions/npm-ci-test-cypress@main
         with:
           # pass the matrix node version to the called workflow
           node-version: ${{ matrix.node-version }}
           cache-additional-path: ${{ vars.CACHE_ADDITIONAL_PATH }}
-          # cache-reset: true
+          cache-reset: true
 
   # No sonar for this repo, we don't do coverage for sk libs/apps (yet)
   # sonar:
